chore: Change the scheduler to work every hour